Added the links in the icons

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <p>5 Matches Per Day</p>
             <p>10 Messages Per Day</p>
             <p>Unlimited App Usage</p>
-            <button class="pricing-btn btn btn-outline-dark btn-lg" type="button">Sign Up</button>
+            <button class="pricing-btn btn btn-outline-dark btn-lg " type="button">Sign Up</button>
           </div>
         </div>
       </div>
@@ -231,10 +231,10 @@
 
   <footer class="white-section" id="footer">
 
-    <i class="fa-brands fa-twitter social-logo"></i>
-    <i class="fa-brands fa-facebook-f social-logo"></i>
-    <i class="fa-brands fa-instagram social-logo"></i>
-    <i class="fa-solid fa-envelope social-logo"></i>
+    <a href="https://twitter.com/AmanMandal_"><i class="fa-brands fa-twitter social-logo"></i></a>
+    <a href="https://github.com/Aman-Mandal"><i class="fa-brands fa-github social-logo"></i></a>
+    <a href="https://www.instagram.com/a_m_a_n_._/"><i class="fa-brands fa-instagram social-logo"></i></a>
+    <a href="https://www.linkedin.com/in/amanmandal"><i class="fa-brands fa-linkedin social-logo"></i></a>
     <p class="footer-para">© Copyright 2022-Aman TinDog</p>
 
   </footer>
